--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,57 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
     <title>{% block title %}{% endblock %}</title>
 
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css" />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('css/style.css') }}" type="text/css" />
     {% endblock %}
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 
 <body>
-<div class="container-fluid">
-    <div id="header" class="hero-unit">
-        <h1>Teambuilder</h1>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <!-- Hamburger responsive > -->
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Menu</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- < Hamburger responsive -->
+                <a class="navbar-brand" href="#">TeamBuilder</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">Monter une équipe</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mon compte <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Mon profil</a></li>
+                            <li><a href="#">Mes règles</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Déconnexion</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
     </div>
 
     <div class="row-fluid">
-        <div id="menu" class="span3">
-            <h3>Navigation</h3>
-            <ul class="nav nav-pills nav-stacked">
-                <li><a href="{{ path('tm_teambuilder_champion_lister') }}">Liste des champions</a></li>
-                <li><a href="{{ path('tm_teambuilder_champion_ajouter') }}">Ajouter un champion</a></li>
-                <li><a href="{{ path('tm_teambuilder_role_lister') }}">Liste des rôles</a></li>
-                <li><a href="{{ path('tm_teambuilder_role_ajouter') }}">Ajouter un rôle</a></li>
-                <li><a href="{{ path('tm_teambuilder_caracteristique_lister') }}">Liste des caractéritiques</a></li>
-                <li><a href="{{ path('tm_teambuilder_caracteristique_ajouter') }}">Ajouter une caractéritique</a></li>
-                <li><a href="{{ path('tm_teambuilder_typeattaque_lister') }}">Liste des types d'attaques</a></li>
-                <li><a href="{{ path('tm_teambuilder_typeattaque_ajouter') }}">Ajouter un type d'attaque</a></li>
-                <li><a href="{{ path('tm_teambuilder_operation_lister') }}">Liste des opérations</a></li>
-                <li><a href="{{ path('tm_teambuilder_operation_ajouter') }}">Ajouter une opération</a></li>
-                <li><a href="{{ path('tm_teambuilder_regle_lister') }}">Liste des règles</a></li>
-                <li><a href="{{ path('tm_teambuilder_regle_ajouter') }}">Ajouter une règle</a></li>
-            </ul>
-        </div>
-        <div id="content" class="span9">
+        {#<div id="menu" class="span3">#}
+            {#<h3>Navigation</h3>#}
+            {#<ul class="nav nav-pills nav-stacked">#}
+                {#<li><a href="{{ path('tm_teambuilder_champion_lister') }}">Liste des champions</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_champion_ajouter') }}">Ajouter un champion</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_role_lister') }}">Liste des rôles</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_role_ajouter') }}">Ajouter un rôle</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_caracteristique_lister') }}">Liste des caractéritiques</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_caracteristique_ajouter') }}">Ajouter une caractéritique</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_typeattaque_lister') }}">Liste des types d'attaques</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_typeattaque_ajouter') }}">Ajouter un type d'attaque</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_operation_lister') }}">Liste des opérations</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_operation_ajouter') }}">Ajouter une opération</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_regle_lister') }}">Liste des règles</a></li>#}
+                {#<li><a href="{{ path('tm_teambuilder_regle_ajouter') }}">Ajouter une règle</a></li>#}
+            {#</ul>#}
+        {#</div>#}
+        <div class="container">
             {% block body %}
             {% endblock %}
         </div>
     </div>
 
-    <hr>
-
-    <footer>
-    </footer>
-</div>
-
 {% block javascripts %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ asset('js/bootstrap.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/jquery.liveFilter.js') }}"></script>
-    <script src="{{ asset('js/script.js') }}" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ asset('js/script.js') }}" ></script>
+    <script type="text/javascript" src="{{ asset('js/animate.js') }}" ></script>
 {% endblock %}
 
 </body>
