--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -35,11 +35,10 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- < Hamburger responsive -->
-                <a class="navbar-brand" href="#">TeamBuilder</a>
+                <a class="navbar-brand">TeamBuilder</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
                     <li><a href="#about">Monter une équipe</a></li>
                 </ul>
 
