--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/getteambuilderajax.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/getteambuilderajax.html.twig
@@ -13,7 +13,7 @@
         <div class="row">
             {% for i in 0..4 %}
                 <div class="col-md-12">
-                    <div class="thumbnail">
+                    <div class="thumbnail center">
                         <a class="pick-champion" data-id-champion="{{ i }}"></a>
                         <div class="champion-role">
                             <label for="role">Rôle :</label>
@@ -31,7 +31,7 @@
         <div class="row">
             Champions bannis
             {% for i in 0..2 %}
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <div class="thumbnail">
                         <a class="banned-champion" data-id-champion="{{ i }}"></a>
                     </div>
