--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/getteambuilderajax.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/getteambuilderajax.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row text-center teambuilder">
     <div class="col-md-2 {{ monEquipe }}-team my-team">
         <div class="row">
             <p>
