--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -27,37 +27,39 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <!-- Hamburger responsive > -->
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Menu</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- < Hamburger responsive -->
                 <a class="navbar-brand">TeamBuilder</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about">Monter une équipe</a></li>
+                    <li><a href="{{ path('tm_teambuilder_regle_appliquer') }}">Monter une équipe</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mon compte <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Mon profil</a></li>
-                            <li><a href="#">Mes règles</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Déconnexion</a></li>
-                        </ul>
-                    </li>
+                    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ app.user.username }}<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="{{ path('fos_user_profile_edit') }}">Mon profil</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('tm_teambuilder_regle_lister') }}">Mes règles</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{ path('fos_user_security_logout') }}">Déconnexion</a></li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{{ path('fos_user_security_login') }}">Connexion</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('fos_user_registration_register') }}">Creer un compte</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
     </div>
 
-    <div class="row-fluid">
+    <div class="row">
         {#<div id="menu" class="span3">#}
             {#<h3>Navigation</h3>#}
             {#<ul class="nav nav-pills nav-stacked">#}
