--- a/src/Tm/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
+++ b/src/Tm/UserBundle/Resources/views/ChangePassword/changePassword_content.html.twig
@@ -28,11 +28,14 @@
         <div class="form-group">
             <div class="col-xs-4">
                 {{ form_label(form.plainPassword.second) }}
-                {{ form_widget(form.plainPassword.second ,{ 'attr': {'class': 'form-control', 'placeholder' : 'Confirmation du nouveau mot de passe'} }) }}
+                {{ form_widget(form.plainPassword.second , { 'attr': {'class': 'form-control', 'placeholder' : 'Confirmation du nouveau mot de passe'} }) }}
                 {{ form_errors(form.plainPassword.second) }}
             </div>
         </div>
     </div>
+
+    {{ form_rest(form) }}
+
     <div class="row">
         <div class="form-group">
             <div class="col-xs-4">
@@ -41,3 +44,4 @@
         </div>
     </div>
 </form>
+
