--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -31,7 +31,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ path('tm_teambuilder_regle_appliquer') }}">Monter une équipe</a></li>
+                    <li><a href="{{ path('tm_teambuilder_index') }}">Monter une équipe</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
