--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/ajouterregle.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/ajouterregle.html.twig
@@ -34,16 +34,14 @@
     <div class="row">
         <div class="form-group">
             <div class="col-xs-4">
-                <label class="required" for="typeregle">Type de règle </label>
-                <select id="typeregle" class="form-control" name="typeregle">
-                    <option value="caracteristique">Caractéristique</option>
-                    <option value="typeAttaque">Type d'attaque</option>
-                </select>
+                {{ form_label(form.typeRegle, 'Type de règle') }}
+                {{ form_widget(form.typeRegle ,{ 'attr': {'class': 'form-control'} }) }}
+                {{ form_errors(form.typeRegle) }}
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="form-group">
+        <div class="form-group typeRegle tm_teambuilderbundle_regle_caracteristique">
             <div class="col-xs-4">
                 {{ form_label(form.caracteristique) }}
                 {{ form_widget(form.caracteristique ,{ 'attr': {'class': 'form-control'} }) }}
@@ -52,7 +50,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="form-group">
+        <div class="form-group typeRegle tm_teambuilderbundle_regle_typeAttaque">
             <div class="col-xs-4">
                 {{ form_label(form.typeAttaque) }}
                 {{ form_widget(form.typeAttaque ,{ 'attr': {'class': 'form-control'} }) }}
