--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/modifierregle.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/modifierregle.html.twig
@@ -2,7 +2,7 @@
 {% extends "TmTeambuilderBundle::layout.html.twig" %}
 
 {% block title %}
-    Modifier - {{ parent() }}
+    Modification des regles personnalisées
 {% endblock %}
 
 {% block tmteambuilder_body %}
