--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "TmTeambuilderBundle::layout.html.twig" %}
     {% block title %}
-        Créateur d'équipe
+        Créateur d'équipe optimisée - League of Legends
     {% endblock %}
 
     {% block tmteambuilder_body %}
