--- a/src/Tm/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Tm/UserBundle/Resources/views/Security/login.html.twig
@@ -8,7 +8,7 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <form action="{{ path("fos_user_security_check") }}" method="post">
+    <form action="{{ path("fos_user_security_check") }}" class="fos_user_security_login" method="post">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
 
         <div class="row">
