AJout des messages des déifférentes phases lors de la sélection des champions

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -46,3 +46,8 @@ body {
 .fos_user_security_login .checkbox input[type="checkbox"] {
     margin-left: 0px;
 }
+
+.message{
+    margin-top: 20px;
+    text-align: center;
+}
