--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
@@ -4,7 +4,7 @@
     {% endblock %}
 
     {% block tmteambuilder_body %}
-        <h2>Créez votre équipe :</h2>
+        <div class="message alert alert-success"> Sélectionnez votre équipe </div>
 
         <div class="col-md-12">
             <div class="row form-search-champion">
