--- a/web/css/style.css
+++ b/web/css/style.css
@@ -9,6 +9,7 @@ body {
 .champion-list .item-champion .thumbnail  {
     background-color: #2ecc71;
     color: white;
+    height: 130px;
 }
 
 .blue-team {
@@ -51,3 +52,170 @@ body {
     margin-top: 20px;
     text-align: center;
 }
+
+.teambuilder .col-md-12 {
+    padding-left: 40px;
+}
+
+.champion-card:hover {
+    transform: rotateY(180deg);
+}
+.champion-card {
+    transform: perspective(1000px);
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    /*position: relative;*/
+    transform-origin: 50% 50% 0;
+    transform-style: preserve-3d;
+    transition-duration: 500ms;
+    transition-property: transform;
+    transition-timing-function: ease;
+    width: 100%;
+}
+
+.champion-card .front, .champion-card .back {
+    backface-visibility: hidden;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    transform: rotateY(0deg);
+    position: absolute;
+    width: 100%;
+}
+
+.champion-card .back {
+    transform: rotateY(-180deg);
+}
+
+.front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+.container input[type=radio] {
+    outline-style: none;
+}
+.bar {
+    background-color: #1a1a1a;
+    width: 80%;
+    border: 1px solid grey;
+    position: relative;
+    height: 21px;
+    display: inline-block;
+    border-radius: 5px;
+    box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
+}
+/*.champion-card .back .champion-stat{*/
+    /*width: 120px;*/
+    /*height: 120px;*/
+/*}*/
+.champion-card .back .champion-stat {
+    clear: both;
+}
+.champion-card .back .champion-stat .nom {
+
+    line-height: 0.8;
+}
+.champion-card .back .champion-stat .attaque img, .champion-card .back .champion-stat .bar img,
+.champion-card .back .champion-stat .defense img, .champion-card .back .champion-stat .magie img,
+.champion-card .back .champion-stat .difficulte img {
+    float: left;
+}
+
+.bar:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    border-radius: 3px;
+    /*box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;*/
+    transition: width .4s ease-in-out;
+}
+
+.attaque .bar:after {
+    background-color: #a7251a;
+    box-shadow: 0 3px 3px rgba(255, 255, 255, .7) inset, 0 -3px 3px rgba(255, 255, 255, .7) inset;
+    animation: animate-glow 1s ease-out infinite;
+}
+
+.defense .bar:after {
+    background-color: #3ca747;
+    box-shadow: 0 3px 3px rgba(255, 255, 255, .7) inset, 0 -3px 3px rgba(255, 255, 255, .7) inset;
+    animation: animate-glow 1s ease-out infinite;
+}
+
+.magie .bar:after {
+    background-color: #295ea7;
+    box-shadow: 0 3px 3px rgba(255, 255, 255, .7) inset, 0 -3px 3px rgba(255, 255, 255, .7) inset;
+    animation: animate-glow 1s ease-out infinite;
+}
+
+.difficulte .bar:after {
+    background-color: #6e14a7;
+    box-shadow: 0 3px 3px rgba(255, 255, 255, .7) inset, 0 -3px 3px rgba(255, 255, 255, .7) inset;
+    animation: animate-glow 1s ease-out infinite;
+}
+
+.bar[data-length="10"]:after { width: 10% }
+.bar[data-length="20"]:after { width: 20% }
+.bar[data-length="30"]:after { width: 30% }
+.bar[data-length="40"]:after { width: 40% }
+.bar[data-length="50"]:after { width: 50% }
+.bar[data-length="60"]:after { width: 60% }
+.bar[data-length="70"]:after { width: 70% }
+.bar[data-length="80"]:after { width: 80% }
+.bar[data-length="90"]:after { width: 90% }
+.bar[data-length="100"]:after { width: 100% }
+
+.accueil {
+    margin-top: 100px;
+    background-image: url("/uploads/img/teambuilder.png");
+    background-repeat: no-repeat;
+    /*background-color: #080808;*/
+    background-position: center;
+    height: 550px;
+    width: 960px;
+    /*min-height: 100%;*/
+    /*min-width: 1024px;*/
+
+    /**/
+    /*width: 100%;*/
+    /*height: auto;*/
+
+  /**/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+}
+
+.content {
+    width: 930px;
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    box-shadow: 0 0 15px 1px #000;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 20px;
+    position: absolute;
+
+}
+
+.ui-progressbar-value {
+    transition: width 0.5s;
+    -webkit-transition: width 0.5s;
+}
+
+.champion-card .back a:hover {
+    text-decoration: none;
+    color: #428bca;
+}
+
+/*body {*/
+    /*background-color: white;*/
+/*}*/
