--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -19,7 +19,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <noscript>test</noscript>
 </head>
 
 <body>
@@ -27,11 +27,11 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand">TeamBuilder</a>
+                <a href="{{ path('tm_teambuilder_index') }}" class="navbar-brand">Team Builder</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ path('tm_teambuilder_index') }}">Monter une équipe</a></li>
+                    <li><a href="{{ path('tm_teambuilder_creer_equipe') }}">Créer une équipe</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -59,7 +59,8 @@
         </div>
     </div>
 
-    <div class="row">
+    {#<div class="row">#}
+
         {#<div id="menu" class="span3">#}
             {#<h3>Navigation</h3>#}
             {#<ul class="nav nav-pills nav-stacked">#}
@@ -77,11 +78,13 @@
                 {#<li><a href="{{ path('tm_teambuilder_regle_ajouter') }}">Ajouter une règle</a></li>#}
             {#</ul>#}
         {#</div>#}
+        {% block accueil %}
         <div class="container">
+        {% endblock %}
             {% block body %}
             {% endblock %}
         </div>
-    </div>
+    {#</div>#}
 
 {% block javascripts %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
