--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
@@ -1,27 +1,28 @@
 {% extends "TmTeambuilderBundle::layout.html.twig" %}
     {% block title %}
-        Créateur d'équipe optimisée - League of Legends
+        Team Builder - League of Legends
     {% endblock %}
 
-    {% block tmteambuilder_body %}
-        <div class="message alert alert-success"> Sélectionnez votre équipe </div>
+     {% block accueil %}
+        <div class="container accueil">
 
-        <div class="col-md-12">
-            <div class="row form-search-champion">
-                <div class="col-md-12">
-                    <div class="form-inline">
-                        <label for="team">Je suis :</label>
-                        <label><input name="team" class="form-control" type="radio" value="BLUE"> Bleu</label>
-                        <label><input name="team" class="form-control" type="radio" value="VIOLET"> Violet</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-offset-2 col-md-8">
-                        <div class="form-group">
-                            <input type="search search-input" class="form-control champion-search-input" placeholder="Chercher un champion...">
-                        </div>
-                    </div>
-                </div>
-            </div>
+     {% endblock %}
+
+    {% block tmteambuilder_body %}
+        <div class="content">
+            <p><b>A quoi sert ce site ?</b></p>
+            <p>Ce site permet de créer une équipe de champions optimisée,
+                pour le jeu League of Legends, en suggérant les champions à ajouter dans l'équipe selon des critères d'optimisation.</p>
+            <p>Il est possible d'utiliser, soit des critères prédéfinis soit de spécifier ses propres critères d'optimisation en créant un compte.</p>
+            <p><b>Comment ça marche ?</b></p>
+            <p>Phase 1 : Phase de sélection de l'équipe</p>
+            <p>Sélectionner la couleur de votre équipe</p>
+            <p>Phase 2 : Phase de ban</p>
+            <p>Dans cette phase chaque équipe séléctionne tour à tour un champion à bannir (en cliquant sur l'image du champion), en commençant par l'équipe Bleue, jusqu'à avoir bannis un total de 3 champions dans chaque équipe.</p>
+            <p>Phase 3 : Phase de sélection des champions</p>
+            <p>Chaque équipe doit sélectionner un champion (en cliquant sur l'image du champion) selon l'ordre indiqué tout en haut dans l'encadré vert </p>
+            <p>Lorsque c'est au tour de votre équipe de sélectionner un champion vous avez la possibilité de demander au site de vous suggérer un champion à choisir selon les régles prédéfinies ou si vous êtes connecté, avec un compte vos propres régles.</p>
+            <p>Il vous suffit alors de sélectionner le rôle que vous souhaitez occuper avec un champion et ensuite de cliquer sur le bouton "Suggérer" et le site vous suggérera alors une liste de champions afin de rendre votre équipe optimisée en fonction des critères choisis.</p>
+            <p>Vous avez à présent toutes les informations nécessaires pour <a class="btn btn-primary" href="{{ path('tm_teambuilder_creer_equipe') }}">Créer une équipe</a>.</p>
         </div>
     {% endblock %}
