Ajout des barres de statistiques des champions

--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/getteambuilderajax.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/getteambuilderajax.html.twig
@@ -63,7 +63,7 @@
                                         <span>
                                             <img src="/uploads/img/icones/defense.png" title="Défense">
                                         </span>
-                                        <span class="bar" data-length="{{ champion.dafense }}"></span>
+                                        <span class="bar" data-length="{{ champion.defense }}"></span>
                                     </span>
                                      <span class="magie">
                                         <span>
