Fix bug parameters.php

--- a/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
+++ b/src/Tm/TeambuilderBundle/Resources/views/Teambuilder/index.html.twig
@@ -18,11 +18,11 @@
             <p>Phase 1 : Phase de sélection de l'équipe</p>
             <p>Sélectionner la couleur de votre équipe</p>
             <p>Phase 2 : Phase de ban</p>
-            <p>Dans cette phase chaque équipe séléctionne tour à tour un champion à bannir (en cliquant sur l'image du champion), en commençant par l'équipe Bleue, jusqu'à avoir bannis un total de 3 champions dans chaque équipe.</p>
+            <p>Dans cette phase chaque équipe séléctionne tour à tour un champion à bannir (en cliquant sur l'image du champion), en commençant par l'équipe Bleue, jusqu'à avoir banni un total de 3 champions dans chaque équipe.</p>
             <p>Phase 3 : Phase de sélection des champions</p>
             <p>Chaque équipe doit sélectionner un champion (en cliquant sur l'image du champion) selon l'ordre indiqué tout en haut dans l'encadré vert </p>
-            <p>Lorsque c'est au tour de votre équipe de sélectionner un champion vous avez la possibilité de demander au site de vous suggérer un champion à choisir selon les régles prédéfinies ou si vous êtes connecté, avec un compte vos propres régles.</p>
-            <p>Il vous suffit alors de sélectionner le rôle que vous souhaitez occuper avec un champion et ensuite de cliquer sur le bouton "Suggérer" et le site vous suggérera alors une liste de champions afin de rendre votre équipe optimisée en fonction des critères choisis.</p>
+            <p>Lorsque c'est au tour de votre équipe de sélectionner un champion vous avez la possibilité de demander au site de vous suggérer un champion à choisir selon les règles prédéfinies ou, si vous êtes connecté avec un compte, selon vos propres règles.</p>
+            <p>Il vous suffit alors de sélectionner le rôle que vous souhaitez occuper avec un champion et ensuite de cliquer sur le bouton "Suggérer" et le site vous suggérera alors une liste de champions afin de rendre votre équipe optimale en fonction des critères choisis.</p>
             <p>Vous avez à présent toutes les informations nécessaires pour <a class="btn btn-primary" href="{{ path('tm_teambuilder_creer_equipe') }}">Créer une équipe</a>.</p>
         </div>
     {% endblock %}
